fix(css): date-picker z-index

--- a/scss/os/_overrides_tuieditor.scss
+++ b/scss/os/_overrides_tuieditor.scss
@@ -496,7 +496,3 @@
   }
 }
 
-.ui-datepicker {
-  z-index: $u-zindex-base !important;
-}
-
